Unavailable menu items no longer show up in customer view. Changed formatting for the input field for comments. Fixed error text not showing up in customer login.

--- a/client/src/components/pages/CustomerView/tabs/MenuView.css
+++ b/client/src/components/pages/CustomerView/tabs/MenuView.css
@@ -42,3 +42,16 @@
 .item-name{
     font-weight: bold;
 }
+
+.comment-input{
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    background-color: #f8f8f8;
+    border-radius: 8px;
+    transition: 0.4s;
+    border: black solid 1px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin-bottom: 2px;
+}
